@@ -1,4 +1,3 @@
-- check out why alphaev67-unknown-linux-gnu doesn't work with annoying getdelim, getstr, getline stuff
 - add error.c into *.po
 - use GNU error instead of fprintf
 - wolp (Wake On LAN proxy) support http://etherboot.sf.net/wolp, maybe a
