@@ -4,6 +4,8 @@
 	* configure.ac: jm_PREREQ_ERROR
 	* src/wol.c: GNU error needs global program_name symbol -> rename name
 		to program_name and destatic it ;-)
+	* lib/getline.c: fixed return values (int != ssize_t on
+		alphaev67-unknown-linux-gnu)
 
 2002-03-19	Thomas Krennwallner <krennwallner@aon.at>
 
